# Polls-App

./: .gitignore  README.md  docker-compose.yml  env.example  package.json  vercel.json
.github/workflows/: ci-cd.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  main.py  pyproject.toml  railway.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1bdd28c363ef_added_polls.py  32a901478a6c_inital_commit.py  4bd70d447111_resolved_naming_conflict.py  7e0686f78c2e_fixed_polls.py  982bab33a911_default_values_to_votes.py
backend/api/: auth.py  config.py  container.py  database.py  dependencies.py  exceptions.py  middlewares.py
backend/api/events/: README.md  __init__.py  bus.py
backend/api/models/: polls.py  users.py  votes.py
backend/api/repos/interfaces/: poll_repository.py  user_repository.py  vote_repository.py
backend/api/repos/postgres/: polls.py  users.py  votes.py
backend/api/routers/: polls.py  users.py  votes.py
backend/api/schemas/: poll.py  token.py  user.py  vote.py
backend/api/services/: poll_service.py  user_service.py  vote_service.py
backend/api/utils/: decorators.py  rate_limiting.py  role_helpers.py
backend/tests/: conftest.py  test_container_example.py
backend/tests/api/: test_users.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: createPolls.tsx  myPolls.tsx  pollsCard.tsx  wall.tsx
frontend/lib/: api-client.ts  auth.ts  polls.ts
frontend/stores/: auth-store.ts
(+6 files in other folders)
