
[tool.poetry]
name = "polls-backend"
version = "0.1.0"
description = "A FastAPI project scaffold."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.117.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.32"
asyncpg = "0.30.0"
alembic = "1.13.0"
python-dotenv = "1.0.0"
bcrypt = "4.2.1"
python-jose = "3.3.0"
pydantic-settings = "2.11.0"
slowapi = "0.1.8"
structlog = "23.2.0"
python-multipart = "0.0.6"
greenlet = "^3.0.3"
pydantic = {extras = ["email"], version = "^2.11.9"}
dnspython = "2.8.0"
email-validator = "2.3.0"
sse-starlette = "3.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
httpx = "0.25.0"
pytest-asyncio = "0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
